--- a/test/fixtures/blogs.yml
+++ b/test/fixtures/blogs.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 hi:
+  user: bob
   title: 'Hi.'
   content: MyText
 
 blahhh:
+  user: alice
   title: 'Blahhh!'
   content: MyText
