--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  email: MyString
+alice:
+  name: Alice
+  email: foo@example.com
 
-two:
-  name: MyString
-  email: MyString
+bob:
+  name: Bob
+  email: bar@example.com
